--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
       content="Powered by Free Store 15104 & Sharing Excess"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Sharing Good | powered by Free Store 15104 & Sharing Excess</title>
   </head>
   <body>
