--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     />
     <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <link rel="apple-touch-icon" href="/icon.png" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
