--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="Powered by Free Store 15104 & Sharing Excess"
     />
     <link rel="icon" href="%PUBLIC_URL%/icon.png" />
-    <link rel="apple-touch-icon" href="/icon.png" />
+    <link rel="apple-touch-icon" href="/app-icon.png" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
