adding open graph protocol tags

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,22 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Sharing Good | powered by Free Store 15104 & Sharing Excess</title>
+    <title>Sharing Good | powered by For Good PGH & Sharing Excess</title>
+
+    <meta
+      name="description"
+      content="Sharing Good | Find what you can give 💚"
+    />
+    <!-- OpenGraph Social Preview Tags -->
+    <meta property="og:image" content="%PUBLIC_URL%/og.png" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Sharing Good" />
+    <meta
+      property="og:description"
+      content="Sharing Good | Find what you can give 💚"
+    />
+    <!-- End OpenGraph Social Preview Tags -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
